--- a/Example_05/src/main/resources/application.conf
+++ b/Example_05/src/main/resources/application.conf
@@ -67,3 +67,11 @@ akka.actor.serialization-bindings {
   "scala.Product" = kryo
   "akka.persistence.PersistentRepr" = kryo
 }
+
+akka {
+
+  # Log level used by the configured loggers (see "loggers") as soon
+  # as they have been started; before that, see "stdout-loglevel"
+  # Options: OFF, ERROR, WARNING, INFO, DEBUG
+  loglevel = "DEBUG"
+}
